keycloak/keycloak-metrics_Service_keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: '9000'
    prometheus.io/scrape: 'true'
  labels:
    app.kubernetes.io/component: metrics
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/part-of: keycloak
    app.kubernetes.io/version: 26.3.3
    helm.sh/chart: keycloak-25.2.0
  name: keycloak-metrics
  namespace: keycloak
spec:
  ports:
  - name: tcp-metrics
    port: 9000
    protocol: TCP
    targetPort: management
  selector:
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/part-of: keycloak
  type: ClusterIP
