keycloak/keycloak_Service_keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/part-of: keycloak
    app.kubernetes.io/version: 26.3.3
    helm.sh/chart: keycloak-25.2.0
  name: keycloak
  namespace: keycloak
spec:
  ports:
  - name: http
    nodePort: null
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/part-of: keycloak
  sessionAffinity: None
  type: ClusterIP
